--- a/backEnd/docker-compose.yaml
+++ b/backEnd/docker-compose.yaml
@@ -3,6 +3,8 @@ version: '3.7'
 services: 
   database:
     image: mariadb:10.3
+    ports:
+      - 3306:3306
     environment:
       MYSQL_ROOT_PASSWORD: root
   phpmyadmin:
