--- a/adminUI/package.json
+++ b/adminUI/package.json
@@ -10,6 +10,10 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "5.0.1"
   },
+  "devDependencies": {
+    "@testing-library/react": "^12.1.5",
+    "@testing-library/jest-dom": "5.16.5"
+  },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
