--- a/e2eTests/backEndTests/package.json
+++ b/e2eTests/backEndTests/package.json
@@ -8,6 +8,7 @@
     "axios": "^1.4.0",
     "babel-jest": "^29.6.2",
     "jest": "^29.6.2",
+    "jest-serial-runner": "^1.2.1",
     "mysql": "^2.18.1",
     "mysql2": "^3.5.2"
   },
