--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -10,8 +10,7 @@ jobs:
       - uses: actions/checkout@v3
 
       - name: Build the image
-        run: docker build -f backEnd/server.Dockerfile --tag poytiis/viikkobiitsi-backend .
-        # run: docker build ./backEnd --file server.Dockerfile --tag poytiis/viikkobiitsi-backend
+        run: docker build --tag poytiis/viikkobiitsi-backend ./backEnd
 
       - name: Push the image
         run: |
