Github Actions test 13

--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -11,6 +11,7 @@ jobs:
         image: mariadb:10.3
         env:
           MYSQL_ROOT_PASSWORD: root
+          # MYSQL_ALLOW_EMPTY_PASSWORD: yes
         ports:
           - 3306:3306
       back-end:
@@ -21,13 +22,15 @@ jobs:
     steps:
       - uses: actions/checkout@v3
 
-      - name: Install Node.js
-        uses: actions/setup-node@v3
-        with:
-          node-version: 18.x
+      # - name: Install Node.js
+      #   uses: actions/setup-node@v3
+      #   with:
+      #     node-version: 18.x
 
       - name: Create database
-        run: mysql --host localhost --port 3306 -uroot -e "CREATE DATABASE viikkobiitsi;"
+        # run: mysql --host 127.0.0.1 --port 3306 -uroot -e "CREATE DATABASE viikkobiitsi;"
+        run: mysql --host=127.0.0.1 --user=root --password=root
+
       - name: Run tests
         working-directory: ./e2eTests/backEndTests
         run: |
