--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -29,7 +29,7 @@ jobs:
 
       - name: Create database
         # run: mysql --host 127.0.0.1 --port 3306 -uroot -e "CREATE DATABASE viikkobiitsi;"
-        run: mysql --host=127.0.0.1 --user=root --password=root
+        run: mysql --host=127.0.0.1 --user=root --password=root -e "CREATE DATABASE viikkobiitsi;"
 
       - name: Run tests
         working-directory: ./e2eTests/backEndTests
