--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -22,13 +22,10 @@ jobs:
     steps:
       - uses: actions/checkout@v3
 
-      # - name: Install Node.js
-      #   uses: actions/setup-node@v3
-      #   with:
-      #     node-version: 18.x
-
-      # - name: Create database
-      #   run: mysql --host=127.0.0.1 --user=root --password=root -e "CREATE DATABASE viikkobiitsi;"
+      - name: Install Node.js
+        uses: actions/setup-node@v3
+        with:
+          node-version: 18.x
 
       - name: Create database
         working-directory: ./backEnd/SQL
