--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -21,7 +21,7 @@ jobs:
     runs-on: ubuntu-latest
     needs: build
     services:
-      maria:
+      database:
         image: mariadb:10.3
         env:
           MYSQL_ROOT_PASSWORD: root
