--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -4,7 +4,7 @@ on:
     branches: [ "actions-test" ]
   workflow_dispatch:
 jobs:
-  # build:
+  # build-back-end:
   #   runs-on: ubuntu-latest
   #   steps:
   #     - uses: actions/checkout@v3
@@ -17,93 +17,47 @@ jobs:
   #         docker login -u poytiis -p ${{ secrets.DOCKER_HUB_TOKEN }}
   #         docker push poytiis/viikkobiitsi-backend
 
-  test-back-end:
+  # test-back-end:
+  #   runs-on: ubuntu-latest
+  #   needs: build-back-end
+  #   services:
+  #     database:
+  #       image: mariadb:10.3
+  #       env:
+  #         MYSQL_ROOT_PASSWORD: root
+  #       ports:
+  #         - 3306:3306
+  #     back-end:
+  #       image: poytiis/viikkobiitsi-backend
+  #       ports:
+  #         - 8081:80
+  #   steps:
+  #     - uses: actions/checkout@v3
+
+  #     - name: Install Node.js
+  #       uses: actions/setup-node@v3
+  #       with:
+  #         node-version: 18.x
+
+  #     - name: Create database
+  #       working-directory: ./backEnd/SQL
+  #       run: mysql --host=127.0.0.1 --user=root --password=root < schema.sql
+
+  #     - name: Run tests
+  #       working-directory: ./e2eTests/backEndTests
+  #       run: |
+  #         npm install
+  #         npm test
+  test-front-end-unit:
     runs-on: ubuntu-latest
-    # needs: build
-    services:
-      database:
-        image: mariadb:10.3
-        env:
-          MYSQL_ROOT_PASSWORD: root
-        ports:
-          - 3306:3306
-      back-end:
-        image: poytiis/viikkobiitsi-backend
-        ports:
-          - 8081:80
     steps:
       - uses: actions/checkout@v3
-
       - name: Install Node.js
         uses: actions/setup-node@v3
         with:
           node-version: 18.x
-
-      - name: Create database
-        working-directory: ./backEnd/SQL
-        run: mysql --host=127.0.0.1 --user=root --password=root < schema.sql
-
       - name: Run tests
-        working-directory: ./e2eTests/backEndTests
+        working-directory: ./adminUI
         run: |
           npm install
           npm test
-
-
-
-
-     
-        
-# build:
-#   runs-on: ubuntu-latest
-#   steps:
-#     - uses: actions/checkout@v3
-
-#     - name: Build the image
-#       run: docker build --tag poytiis/viikkobiitsi-backend ./backEnd
-
-#     - name: Push the image
-#       run: |
-#         docker login -u poytiis -p ${{secrets.DOCKER_HUB_TOKEN}}
-#         docker push poytiis/viikkobiitsi-backend
-
-
-  # services:
-  #   -mariadb:
-  #     image: mariadb:10.3
-  #     env:
-  #       MYSQL_ROOT_PASSWORD: root
-  #     ports:
-  #       - 3306:3306
-  #   -back-end:
-  #     image: poytiis/viikkobiitsi-backend
-  #     ports:
-  #       - 8081:80
-
-
-
-  # build:
-  #   runs-on: ubuntu-latest
-  #   steps:
-  #     - uses: actions/checkout@v3
-
-  #     - name: Build the image
-  #       run: docker build --tag poytiis/viikkobiitsi-backend ./backEnd
-
-  #     - name: Push the image
-  #       run: |
-  #         docker login -u poytiis -p ${{secrets.DOCKER_HUB_TOKEN}}
-  #         docker push poytiis/viikkobiitsi-backend
-
-
-
-#   name: Build back-end
-# on:
-#   push:
-#     branches: [ "actions-test" ]
-#   workflow_dispatch:
-# jobs:
-#   test-back-end:
-#     runs-on: ubuntu-latest
-#       steps:
-#         - uses: actions/checkout@v3
