--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -63,21 +63,21 @@ jobs:
   #       run: |
   #         npm install
   #         npm test
-  # build-front-end:
-  #   runs-on: ubuntu-latest
-  #   steps:
-  #     - uses: actions/checkout@v3
+  build-front-end:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
 
-  #     - name: Build the image
-  #       run: docker build --tag poytiis/viikkobiitsi-admin-front-end ./adminUI
+      - name: Build the image
+        run: docker build --tag poytiis/viikkobiitsi-admin-front-end ./adminUI
 
-  #     - name: Push the image
-  #       run: |
-  #         docker login -u poytiis -p ${{ secrets.DOCKER_HUB_TOKEN }}
-  #         docker push poytiis/viikkobiitsi-admin-front-end
+      - name: Push the image
+        run: |
+          docker login -u poytiis -p ${{ secrets.DOCKER_HUB_TOKEN }}
+          docker push poytiis/viikkobiitsi-admin-front-end
   test-front-end-e2e:
     runs-on: ubuntu-latest
-    # needs: build-front-end
+    needs: build-front-end
     services:
       database:
         image: mariadb:10.3
