--- a/adminUI/Dockerfile
+++ b/adminUI/Dockerfile
@@ -1,7 +1,8 @@
 FROM node:18-alpine AS builder
 WORKDIR /app
 ENV NODE_ENV development
-ENV REACT_APP_API_URL=http://localhost:8081/
+ARG REACT_APP_API_URL_ARG
+ENV REACT_APP_API_URL=$REACT_APP_API_URL_ARG
 
 COPY ./package.json ./
 RUN npm install
