--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -38,11 +38,11 @@ jobs:
         ports:
           - 8081:80
         env:
-          DATABASE_SERVER_NAME: $DATABASE_SERVER_NAME
-          DATABASE_USER: $DATABASE_USER
-          DATABASE_PASSWORD: $DATABASE_PASSWORD
-          DATABASE_DATABASE_NAME: $DATABASE_DATABASE_NAME
-          ADMIN_UI_DOMAIN: $ADMIN_UI_DOMAIN
+          DATABASE_SERVER_NAME: ${{ env.DATABASE_SERVER_NAME }}
+          DATABASE_USER:  ${{ env.DATABASE_USER }}
+          DATABASE_PASSWORD:  ${{ env.DATABASE_PASSWORD }}
+          DATABASE_DATABASE_NAME: ${{ env.DATABASE_DATABASE_NAME }}
+          ADMIN_UI_DOMAIN:  ${{ env.ADMIN_UI_DOMAIN }}
 
     steps:
       - uses: actions/checkout@v3
