--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -8,7 +8,7 @@ env:
   REACT_APP_API_URL_ARG: http://localhost:8081/
 on:
   push:
-    branches: [ "main" ]
+    branches: [ "dev" ]
 jobs:
   # build-back-end:
   #   runs-on: ubuntu-latest
